tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.diagnostic
diagnostic error code=O0001 family=ownership message="cannot assign to borrowed field 'pair.0'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.ari" bytes=242
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.ari" line=13 column=8 end_line=13 end_column=12 byte_start=202 byte_end=206 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-field-assignment-while-borrowed.ari:13:8\n    |\n 13 |   pair.left = 3;\n    |        ^^^^"
